test/corpus/cell.txt
================================
Declarations of Cell Arrays
================================
A = {};
A = {1};

---

(source_file
  (expression (identifier) (cell_definition))
  (expression (identifier) (cell_definition (factor (number))))
)
