test/corpus/classdef.txt
================================
Simple class definition
================================

classdef MyClass
  properties

  end

  methods
    function obj = MyClass()
    end
  end

end

---

(source_file
  (class_definition 
    classname: (identifier)
    (properties_definition
    endproperties: (end))
    (methods_definition
      (function_definition 
        function_keyword: (function_keyword)
        return_variable: (return_value (identifier))
        function_name: (identifier)
        (parameter_list)
      end: (end))
    endmethods: (end))
    endclass: (end))
)


================================
Class definition with superclass
================================

classdef MyClass < MySuperClass & another.class
  properties

  end

  methods
    function obj = MyClass()
      obj = obj@MySuperClass();
    end
  end

end

---

(source_file
  (class_definition 
    classname: (identifier)
    superclass: (identifier)
    superclass: (struct (identifier) (identifier))
    (properties_definition
    endproperties: (end))
    (methods_definition
      (function_definition 
        function_keyword: (function_keyword)
        return_variable: (return_value (identifier))
        function_name: (identifier)
        (parameter_list)
        (block (expression 
                  variable_name: (identifier) (factor 
                  (function_call
                    function_name: (identifier)
                    superclass: (identifier)
                    (argument_list)))))
      end: (end))
    endmethods: (end))
    endclass: (end))
)

===============================
Property Validation, Access
===============================

classdef PropertyValidation
    properties (GetAccess = public, SetAccess = private)
        % Commentary in the properties block
        ValueA int
        ValueB (1,1) int = 0
        ValueC {mustBeNumeric}
        ValueD some.type
    end
end

---

(source_file
  (class_definition (identifier)
    (properties_definition (property_access (identifier) (identifier) (identifier) (identifier))
    (comment)
    (property (identifier) (identifier))
    (property (identifier) 
    (number) (number) (identifier) (factor (number)))
    (property (identifier) (identifier))
    (property (identifier) (struct (identifier) (identifier)))
    (end))
    (end)))
