test/corpus/declaration.txt
================================
Declarations of variables
================================

a = 3

---

(source_file
  (expression (identifier) (factor))
)

========================================
Declarations of variables with semicolon
========================================

a = 3;

---

(source_file
  (expression (identifier) (factor))
)

========================================
Declarations of variables as computation
========================================

a = 3 * f;

---

(source_file
  (expression (identifier) (operation (factor) (factor (identifier))))
)
