test/corpus/function_call.txt
=============
Function call
=============

disp(32312);

---

(source_file (function_call (identifier) (argument_list (factor))))

==================================
Function call inside of expression
==================================

a = disp(322134);

---

(source_file 
  (expression (identifier) 
    (factor (function_call 
      (identifier)
      (argument_list (factor)))
    )
  )
)
