test/corpus/function_definition_ret.txt
===============================
Function definition with return
===============================

function return_type = function_name(params)
  a = 3
end

---
(source_file
(function_definition
  (identifier)
  (identifier)
  (parameter_list (identifier))
  (block (expression (identifier) (factor))) (end)
))
