test/corpus/structure.txt
========
Struture
========

if x > y

end

---

(source_file
  (structure (operation (factor (identifier)) (factor (identifier))) (end))
)

==================
Struture with bool
==================

if x && y

end

---

(source_file
  (structure (bool (factor (identifier)) (factor (identifier))) (end))
)

========================
Struture with expression
========================

for i=1:n
end

---

(source_file
  (structure (expression (identifier) (operation (factor) (factor (identifier)))) (end))
)

===========================
Struture with bool constant
===========================

if true
  a = 3
end

---

(source_file
  (structure (block 
    (expression (identifier) (factor))) (end)
  )
)
